--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,14 @@ baseURL = "https://blog1.naveeraashraf.com/"
 languageCode = "en-us"
 title = "Blog | Naveera Ashraf"
 theme = "hugo-paper"
+
+[[menu.main]]
+	name   = "About"
+    # pre = "<i class='fa fa'-heart'></i>"
+	url    = "https://naveeraashraf.com"
+	weight = 10
+
+[[menu.main]]
+	name   = "Posts"
+	url    = "/"
+	weight = 20
